force-app/main/default/objects/Health_and_Immunization__c.object
<CustomObject>
    <fields>
        <fullName>Immunization_Status_FollowUp__c</fullName>
        <label>Immunization Status FollowUp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>Extension Approved by Principal</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Allow</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Hold</fullName>
                </value>
                <value>
                    <fullName>Incomplete Exemption</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Medical Exemption</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Required</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Verified</fullName>
                </value>
                <value>
                    <fullName>Pending- IA Review</fullName>
                </value>
                <value>
                    <fullName>Personal Exemption</fullName>
                </value>
                <value>
                    <fullName>Religious Exemption</fullName>
                </value>
                <value>
                    <fullName>Review - Allow</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified-In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunization_Status__c</fullName>
        <description>Enrollment Immunization Status</description>
        <label>Immunization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>Extension Approved by Principal</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Allow</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Hold</fullName>
                </value>
                <value>
                    <fullName>Incomplete Exemption</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid Form</fullName>
                </value>
                <value>
                    <fullName>Medical Exemption</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Non-compliant Allow</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Required</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Verified</fullName>
                </value>
                <value>
                    <fullName>Pending- IA Review</fullName>
                </value>
                <value>
                    <fullName>Personal Exemption</fullName>
                </value>
                <value>
                    <fullName>Provisional Certificate Required</fullName>
                </value>
                <value>
                    <fullName>Religious Exemption</fullName>
                </value>
                <value>
                    <fullName>Review - Allow</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified-In Progress</fullName>
                </value>
                <value>
                    <fullName>MCK Liaison Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <description>Insurance company</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KCA_Immunization_Release_Consent__c</fullName>
        <description>Consent to release immunization information (KCA Only)</description>
        <label>KCA Immunization Release Consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Paint_Screening_Status__c</fullName>
        <description>Lead Paint Screening Status</description>
        <label>Lead Paint Screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTSMCA_Developmental_ScreeningStatus__c</fullName>
        <description>The statement that most accurately represents the status of the student’s developmental screening, received between the ages of 3 and 4 years of age</description>
        <label>MTSMCA Developmental ScreeningStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My student completed this screening through my resident school district.</fullName>
                </value>
                <value>
                    <fullName>My student participated in the screening but we refused portions of the screening due to conscientiously held beliefs and submitted a statement as such to the district.</fullName>
                </value>
                <value>
                    <fullName>My student was not screened as during the recommended ages.</fullName>
                </value>
                <value>
                    <fullName>My student was not screened as we were not residents of Minnesota during this time.</fullName>
                </value>
                <value>
                    <fullName>My student was not screened by the resident school district because I submitted an alternative comprehensive screening to the district.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTSMCA_Notarized_Exempt_Status__c</fullName>
        <description>MTSMCA Notarized Exemption status</description>
        <label>MTSMCA Notarized Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicaid_Number__c</fullName>
        <description>Medicaid number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicaid Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_1__c</fullName>
        <description>1st Immunization Communication</description>
        <label>Missing Immun Communication 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>letter</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>WebMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_2__c</fullName>
        <description>2nd Immunization Communication</description>
        <label>Missing Immun Communication 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>letter</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>WebMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_3__c</fullName>
        <description>3rd Immunization Communication</description>
        <label>Missing Immun Communication 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>letter</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>WebMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_Date_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Missing Immun Communication Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_Date_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Missing Immun Communication Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Immun_Communication_Date_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Missing Immun Communication Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Immunizations_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Missing Immunizations Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCCA_Asthma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Asthma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Diabetes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Diabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Food_Allergy_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Food Allergy YN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Insect_Allergy_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Insect Allergy YN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Medicine_Allergy_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Medicine Allergy YN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Other_Allergy_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCA Other Allergy YN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Shot_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Shot Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCA_Screening_Waiver__c</fullName>
        <description>If you prefer not to provide this information or have chosen not to have the student evaluated for the examinations listed above, please check the box below</description>
        <label>OCA Screening Waiver</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I elect not to provide this information.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCA_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student had hearing, vision, speech/communications and medical screenings by a licensed agency or health care provider</description>
        <label>OCA Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OC_AScreening_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the above examination(s) or any other health evaluations reveal any possible special learning needs</description>
        <label>OC AScreening Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PADOH_Chronic_Conditions__c</fullName>
        <description>Chronic Conditions</description>
        <label>PADOH Chronic Conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arthritis/Rheumatic disease&lt;sup&gt;1&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Attention deficit disorder/Hyperactivity (ADD/ADHD)</fullName>
                </value>
                <value>
                    <fullName>Bleeding disorder and Cooley&apos;s anemia&lt;sup&gt;2&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular condition&lt;sup&gt;3&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Cerebral palsy</fullName>
                </value>
                <value>
                    <fullName>Cystic fibrosis</fullName>
                </value>
                <value>
                    <fullName>Diabetes type 1&lt;sup&gt;4&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Diabetes type 2&lt;sup&gt;5&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Epilepsy and other seizure disorders&lt;sup&gt;6&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Life-threatening food allergies&lt;sup&gt;7&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Sickle cell disease&lt;sup&gt;8&lt;/sup&gt;</fullName>
                </value>
                <value>
                    <fullName>Spina bifida</fullName>
                </value>
                <value>
                    <fullName>Tourette&apos;s syndrome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Exam_Date__c</fullName>
        <description>Date of physical examination</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physical_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_No__c</fullName>
        <description>Insurance policy number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insured_Name__c</fullName>
        <description>Name of insurance policy holder</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Insured Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Health and Immunizations</relationshipLabel>
        <relationshipName>Health_and_Immunizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SSR_Adaptive_Coping_Behavior__c</fullName>
        <description>Lack of school coping behaviors related to attention to learning tasks, organizational skills, questioning behavior, following directions, and monitoring time use</description>
        <label>SSR Adaptive Coping Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Adaptive_Other__c</fullName>
        <description>SSR Adaptive Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Adaptive Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Adaptive_Selfcare__c</fullName>
        <description>Poor self-care skills related to personal  hygiene, dress, maintaining personal belongings</description>
        <label>SSR Adaptive Selfcare</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Adaptive_Social_Skills__c</fullName>
        <description>Poor social skills related to working   cooperatively with peers, social perceptions, response to social cues, or socially acceptable language</description>
        <label>SSR Adaptive Social Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Adaptive_Understanding__c</fullName>
        <description>Poor ability to understand directions, communicate needs, and express ideas</description>
        <label>SSR Adaptive Understanding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Attention_Span__c</fullName>
        <description>Attention problems (short attention span)</description>
        <label>SSR Cognitive Attention Span</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Information__c</fullName>
        <description>Has difficulty acquiring, retaining, recalling or manipulating information</description>
        <label>SSR Cognitive Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Learns_Slowly__c</fullName>
        <description>Learns very slowly compared to peers</description>
        <label>SSR Cognitive Learns Slowly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Math__c</fullName>
        <description>Below grade level in math</description>
        <label>SSR Cognitive Math</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Other__c</fullName>
        <description>SSR Cognitive Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Cognitive Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Reading__c</fullName>
        <description>Below grade level in reading</description>
        <label>SSR Cognitive Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Cognitive_Writing__c</fullName>
        <description>Below grade level in writing</description>
        <label>SSR Cognitive Writing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Communication_Articulation__c</fullName>
        <description>Articulates poorly</description>
        <label>SSR Communication Articulation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Communication_Expression__c</fullName>
        <description>Has difficulty expressing ideas</description>
        <label>SSR Communication Expression</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Communication_Other__c</fullName>
        <description>SSR Communication Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Communication Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Communication_Poor_Speech__c</fullName>
        <description>Has poor speech habits</description>
        <label>SSR Communication Poor Speech</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Communication_Stutters__c</fullName>
        <description>Often stutters</description>
        <label>SSR Communication Stutters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Attention__c</fullName>
        <description>Seems not to pay attention</description>
        <label>SSR Hearing Attention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Earaches__c</fullName>
        <description>Has frequent earaches</description>
        <label>SSR Hearing Earaches</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Language_Delay__c</fullName>
        <label>SSR Hearing Language Delay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Other__c</fullName>
        <description>SSR Hearing Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Hearing Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Repeated__c</fullName>
        <description>Frequently asks for information to be repeated or asks “what?”</description>
        <label>SSR Hearing Repeated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Hearing_Respond__c</fullName>
        <description>Does not respond to name, directions, or questions in class</description>
        <label>SSR Hearing Respond</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_History_Poor_Performance__c</fullName>
        <description>History of poor performance or progress in school</description>
        <label>SSR History Poor Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_History_SpEd__c</fullName>
        <description>History of early intervention or special education</description>
        <label>SSR History SpEd</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Last_Grade_Attended__c</fullName>
        <description>Last grade attended</description>
        <label>SSR Last Grade Attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Last_Year_Attended__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Last Year Attended</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Motor_Attention__c</fullName>
        <label>SSR Motor Attention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Motor_Development_Problems__c</fullName>
        <description>Problems with gross motor development (clumsy or awkward)</description>
        <label>SSR Motor Development Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Motor_Other__c</fullName>
        <description>SSR Motor Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Motor Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Motor_Problems_Fine_Skills__c</fullName>
        <description>Problems with fine motor skills (reaching, grasping, manipulation of objects)</description>
        <label>SSR Motor Problems Fine Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Prior_School__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Prior School Attended</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Social_Difficulty_Relating__c</fullName>
        <description>Has difficulty developing or maintaining  peer or adult relationships</description>
        <label>SSR Social Difficulty Relating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Social_Difficulty_Unstruct__c</fullName>
        <description>Has difficulty with unstructured environments  or transitions between activities</description>
        <label>SSR Social Difficulty Unstruct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>